--- a/source/main.html
+++ b/source/main.html
@@ -118,7 +118,7 @@
 
     <section class="popup">
       <div class="popup__wrapper"></div>
-      <form class="popup__form">
+      <form>
         <button class="popup__close-button" type="button"><span class="visually-hidden">Закрыть</span></button>
         <h2 class="popup__title">Закажите VR планетарий</h2>
         <p class="popup__text">Оставьте ваши контактные данные, мы обработаем заявку в течении двух рабочих дней и перезвоним вам</p>
@@ -128,20 +128,9 @@
         <label for="popup-phone" class="visually-hidden">Ваш телефон</label>
         <input id="popup-phone" type="tel" name="user-phone" placeholder="Ваш телефон" pattern="-?(\d+|\d+.\d+|.\d+)([eE][-+]?\d+)?" required>
 
-        <button class="button popup__button popup__send-button" type="submit">Отправить</button>
+        <button class="button popup__send-button" type="submit">Отправить</button>
       </form>
     </section>
-
-    <section class="popup">
-      <div class="popup__wrapper"></div>
-      <div class="popup__message">
-        <button class="popup__close-button" type="button"><span class="visually-hidden">Закрыть</span></button>
-        <p class="popup__title">Сообщение успешно отправлено!</p>
-        <p class="popup__text">Мы обязательно свяжемся с вами в ближайшее время и подробно ответим на ваш вопрос, будьте на связи!</p>
-        <button class="button popup__button" type="button">ОК</button>
-      </div>
-    </section>
-
   </main>
 
   <footer class="page-footer page-footer--hidden">
