--- a/source/product.html
+++ b/source/product.html
@@ -99,35 +99,35 @@
           <div class="swiper-container swiper-container-initialized swiper-container-horizontal">
             <ul class="product__slider-list swiper-wrapper">
 
-            <li class="product__slider-item swiper-slide">
-              <img class="product__slider-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
-            </li>
-            <li class="product__slider-item swiper-slide">
-              <img class="product__slider-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
-            </li>
-            <li class="product__slider-item swiper-slide">
-              <img class="product__slider-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
-            </li>
-            <li class="product__slider-item swiper-slide">
-              <img class="product__slider-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
-            </li>
-            <li class="product__slider-item swiper-slide">
-              <img class="product__slider-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
-            </li>
-            <li class="product__slider-item swiper-slide">
-              <img class="product__slider-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
-            </li>
-          </ul>
+              <li class="product__slider-item swiper-slide">
+                <img class="product__slider-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+              </li>
+              <li class="product__slider-item swiper-slide">
+                <img class="product__slider-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+              </li>
+              <li class="product__slider-item swiper-slide">
+                <img class="product__slider-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+              </li>
+              <li class="product__slider-item swiper-slide">
+                <img class="product__slider-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+              </li>
+              <li class="product__slider-item swiper-slide">
+                <img class="product__slider-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+              </li>
+              <li class="product__slider-item swiper-slide">
+                <img class="product__slider-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+              </li>
+            </ul>
 
-          <div class="product__slider-container slider">
-            <p class="slider__pagination swiper-pagination"></p>
+            <div class="product__slider-container slider">
+              <p class="slider__pagination swiper-pagination"></p>
 
-            <div class="slider__buttons">
-              <button class="slider__button slider__button--back swiper-button-prev" type="button"><span class="visually-hidden">Назад</span></button>
-              <button class="slider__button slider__button--next swiper-button-next" type="button"><span class="visually-hidden">Вперед</span></button>
-              <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
+              <div class="slider__buttons">
+                <button class="slider__button slider__button--back swiper-button-prev" type="button"><span class="visually-hidden">Назад</span></button>
+                <button class="slider__button slider__button--next swiper-button-next" type="button"><span class="visually-hidden">Вперед</span></button>
+                <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
+              </div>
             </div>
-          </div>
           </div>
 
         </div>
@@ -140,7 +140,7 @@
 
     <section class="popup">
       <div class="popup__wrapper"></div>
-      <form class="popup__form">
+      <form>
         <button class="popup__close-button" type="button"><span class="visually-hidden">Закрыть</span></button>
         <h2 class="popup__title">Закажите VR планетарий</h2>
         <p class="popup__text">Оставьте ваши контактные данные, мы обработаем заявку в течении двух рабочих дней и перезвоним вам</p>
@@ -150,18 +150,8 @@
         <label for="popup-phone" class="visually-hidden">Ваш телефон</label>
         <input id="popup-phone" type="tel" name="user-phone" placeholder="Ваш телефон" pattern="-?(\d+|\d+.\d+|.\d+)([eE][-+]?\d+)?" required>
 
-        <button class="popup__send-button" type="submit">Отправить</button>
+        <button class="button popup__send-button" type="submit">Отправить</button>
       </form>
-    </section>
-
-    <section class="popup popup__message">
-      <div class="popup__wrapper"></div>
-      <div class="popup__message">
-        <button class="popup__close-button" type="button"><span class="visually-hidden">Закрыть</span></button>
-        <p class="popup__title">Сообщение успешно отправлено!</p>
-        <p class="popup__text">Мы обязательно свяжемся с вами в ближайшее время и подробно ответим на ваш вопрос, будьте на связи!</p>
-        <button class="popup__button" type="button">ОК</button>
-      </div>
     </section>
   </main>
 
