Исправляет JS модальных окон

--- a/source/main.html
+++ b/source/main.html
@@ -109,17 +109,17 @@
             </li>
           </ul>
           <p class="scroll__text">
-            <a class="scroll__link" href="contacts.html">Скролл вниз</a>
+            <a class="scroll__link" href="explanation.html">Скролл вниз</a>
           </p>
         </div>
       </div>
 
     </section>
 
-    <section class="popup">
+    <section class="popup popup__send">
       <div class="popup__wrapper"></div>
       <form>
-        <button class="popup__close-button" type="button"><span class="visually-hidden">Закрыть</span></button>
+        <button class="popup__close-button popup__close-button--order" type="button"><span class="visually-hidden">Закрыть</span></button>
         <h2 class="popup__title">Закажите VR планетарий</h2>
         <p class="popup__text">Оставьте ваши контактные данные, мы обработаем заявку в течении двух рабочих дней и перезвоним вам</p>
         <label for="popup-name" class="visually-hidden">Ваше имя</label>
@@ -150,6 +150,16 @@
 
   <script>
     $("#popup-phone").mask("+7(999) 999-99-99");
+  </script>
+
+  <script>
+    var openButtonIntro = document.querySelector('.intro__button-order');
+    openButtonIntro.addEventListener('click', function(evt) {
+    evt.preventDefault();
+    popupSend.classList.add('popup--show');
+    body.classList.add('popup-modal');
+    userName.focus();
+  });
   </script>
   <script src="js/main.js" async></script>
 </body>
