--- a/source/technology.html
+++ b/source/technology.html
@@ -78,36 +78,38 @@
           </p>
           <h2 class="technology__item-title">Masters Glass VR-iii</h2>
           <p class="technology__item-text">Используем только оригинальные импортные VR-очки. Технологии протестированы и безопасны для глаз. Напряжение во время просмотра — как при прогулке за счёт качественного обёъмного  изображения.</p>
+          <p class="technology__slider-number slider__number"><span class="technology__slider-number--current">01 /</span> 04</p>
         </li>
-        <li class="technology__item technology__item-2">
+        <li class="technology__item technology__item-2 technology__item--lock">
           <p class="technology__item-image-container technology__item-image-container-2">
             <img class="technology__item-image technology__item-image-2" src="img/VR-glasses.png" width="428" height="220" alt="VR-очки">
           </p>
           <h2 class="technology__item-title">Безопасность</h2>
           <p class="technology__item-text">Зритель всегда находится в центре зала, и четко зафиксирован в пространстве, что делает просмотр понятным и комфортным. Технология виртуальной реальности не портит зрение, а эффект присутсвтия развивает креативность и пространственное мышление.</p>
+          <p class="technology__slider-number slider__number"><span class="technology__slider-number--current">02 /</span> 04</p>
         </li>
         <li class="technology__item technology__item-3">
-          <p class="technology__item-image-container technology__item-image-container-3">
+          <p class="technology__item-image-container technology__item-image-container-3 technology__item--lock">
             <img class="technology__item-image technology__item-image-3" src="img/VR-glasses.png" width="428" height="220" alt="VR-очки">
           </p>
           <h2 class="technology__item-title">Оборудование</h2>
           <p class="technology__item-text">Все фильмы воспроизводятся при помощи встроенных в очки экранов мобильных телефонов ведущих брендов. Наши техники привезут всё обордуование с собой: от вас нужно лишь помещение для урока.</p>
+          <p class="technology__slider-number slider__number"><span class="technology__slider-number--current">03 /</span> 04</p>
         </li>
         <li class="technology__item technology__item-4">
-          <p class="technology__item-image-container technology__item-image-container-4">
+          <p class="technology__item-image-container technology__item-image-container-4 technology__item--lock">
             <img class="technology__item-image technology__item-image-4" src="img/VR-glasses.png" width="428" height="220" alt="VR-очки">
           </p>
           <h2 class="technology__item-title">Система крепления</h2>
           <p class="technology__item-text">Подходит под любой размер головы, даже для первоклассника. Во время просмотра не получится навредить голове ребёнка за счёт тщательно проработанной конструкции очков.</p>
+          <p class="technology__slider-number slider__number"><span class="technology__slider-number--current">04 /</span> 04</p>
         </li>
       </ul>
 
       <div class="technology__slider-container slider">
-          <p class="slider__number"><span class="product__slider-number--current">01 /</span> 06</p>
-
           <div class="slider__buttons">
-            <button class="slider__button slider__button--back" type="button"><span class="visually-hidden">Назад</span></button>
-            <button class="slider__button slider__button--next" type="button"><span class="visually-hidden">Вперед</span></button>
+            <button class="slider__button slider__button--back technology__slider-button--back" type="button"><span class="visually-hidden">Назад</span></button>
+            <button class="slider__button slider__button--next technology__slider-button--next" type="button"><span class="visually-hidden">Вперед</span></button>
           </div>
         </div>
 
