--- a/source/explanation.html
+++ b/source/explanation.html
@@ -65,7 +65,7 @@
 
       <div class="explanation__container">
         <ol class="explanation__list">
-          <li class="explanation__item explanation__item--active">
+          <li class="explanation__item slider__item slider__item--active">
             <div class="explanation__column-image explanation__column-image-inventory"></div>
             <div class="explanation__column-text explanation__column-text-inventory">
               <h2 class="explanation__item-title">Готовим инвентарь</h2>
@@ -74,7 +74,7 @@
             </div>
           </li>
 
-          <li class="explanation__item explanation__item-choose">
+          <li class="explanation__item explanation__item-choose slider__item slider__item--locked">
             <div class="explanation__column-image explanation__column-image-choose"></div>
             <div class="explanation__column-text">
               <h2 class="explanation__item-title">Выбираем фильм</h2>
@@ -83,7 +83,7 @@
             </div>
           </li>
 
-          <li class="explanation__item">
+          <li class="explanation__item slider__item slider__item--locked">
             <div class="explanation__column-image explanation__column-image-glasses"></div>
             <div class="explanation__column-text explanation__column-text-glasses">
               <h2 class="explanation__item-title">Надеваем VR-очки</h2>
@@ -92,7 +92,7 @@
             </div>
           </li>
 
-          <li class="explanation__item">
+          <li class="explanation__item slider__item slider__item--locked">
             <div class="explanation__column-image explanation__column-image-galaxies"></div>
             <div class="explanation__column-text">
               <h2 class="explanation__item-title">Исследуем галактики!</h2>
@@ -105,8 +105,8 @@
         <div class="explanation__slider-container slider">
 
           <div class="slider__buttons">
-            <button class="slider__button slider__button--back explanation__slider-button--back" type="button"><span class="visually-hidden">Назад</span></button>
-            <button class="slider__button slider__button--next explanation__slider-button--next" type="button"><span class="visually-hidden">Вперед</span></button>
+            <button class="explanation__slider-button slider__button slider__button--back" type="button"><span class="visually-hidden">Назад</span></button>
+            <button class="explanation__slider-button slider__button slider__button--next" type="button"><span class="visually-hidden">Вперед</span></button>
           </div>
         </div>
       </div>
