--- a/source/technology.html
+++ b/source/technology.html
@@ -68,50 +68,48 @@
 
       <p class="technology__image-container">
         <img class="technology__image" src="img/VR-glasses.png" width="428" height="220" alt="VR-очки">
-        <button class="button technology__button" type="button"><svg class="technology__button-image" width="40" height="40"><use xlink:href="img/sprite.svg#icon-magnifier"></use></svg><span class="visually-hidden">Увеличить</span></button>
+        <button class="button technology__button" type="button"><svg class="technology__button-image" width="40" height="40"><use xlink:href="#magnifier"></use></svg><span class="visually-hidden">Увеличить</span></button>
       </p>
 
       <ul class="technology__list">
-        <li class="technology__item technology__item-1  slider__item slider__item--active">
+        <li class="technology__item technology__item-1">
           <p class="technology__item-image-container technology__item-image-container-1">
             <img class="technology__item-image technology__item-image-1" src="img/VR-glasses.png" width="428" height="220" alt="VR-очки">
           </p>
           <h2 class="technology__item-title">Masters Glass VR-iii</h2>
           <p class="technology__item-text">Используем только оригинальные импортные VR-очки. Технологии протестированы и безопасны для глаз. Напряжение во время просмотра — как при прогулке за счёт качественного обёъмного  изображения.</p>
-          <p class="technology__slider-number slider__number"><span class="technology__slider-number--current">01 /</span> 04</p>
         </li>
-        <li class="technology__item technology__item-2 slider__item slider__item--locked">
+        <li class="technology__item technology__item-2">
           <p class="technology__item-image-container technology__item-image-container-2">
             <img class="technology__item-image technology__item-image-2" src="img/VR-glasses.png" width="428" height="220" alt="VR-очки">
           </p>
           <h2 class="technology__item-title">Безопасность</h2>
           <p class="technology__item-text">Зритель всегда находится в центре зала, и четко зафиксирован в пространстве, что делает просмотр понятным и комфортным. Технология виртуальной реальности не портит зрение, а эффект присутсвтия развивает креативность и пространственное мышление.</p>
-          <p class="technology__slider-number slider__number"><span class="technology__slider-number--current">02 /</span> 04</p>
         </li>
-        <li class="technology__item technology__item-3 slider__item slider__item--locked">
-          <p class="technology__item-image-container technology__item-image-container-3 technology__item--lock">
+        <li class="technology__item technology__item-3">
+          <p class="technology__item-image-container technology__item-image-container-3">
             <img class="technology__item-image technology__item-image-3" src="img/VR-glasses.png" width="428" height="220" alt="VR-очки">
           </p>
           <h2 class="technology__item-title">Оборудование</h2>
           <p class="technology__item-text">Все фильмы воспроизводятся при помощи встроенных в очки экранов мобильных телефонов ведущих брендов. Наши техники привезут всё обордуование с собой: от вас нужно лишь помещение для урока.</p>
-          <p class="technology__slider-number slider__number"><span class="technology__slider-number--current">03 /</span> 04</p>
         </li>
-        <li class="technology__item technology__item-4 slider__item slider__item--locked">
-          <p class="technology__item-image-container technology__item-image-container-4 technology__item--lock">
+        <li class="technology__item technology__item-4 technology__item--active">
+          <p class="technology__item-image-container technology__item-image-container-4">
             <img class="technology__item-image technology__item-image-4" src="img/VR-glasses.png" width="428" height="220" alt="VR-очки">
           </p>
           <h2 class="technology__item-title">Система крепления</h2>
           <p class="technology__item-text">Подходит под любой размер головы, даже для первоклассника. Во время просмотра не получится навредить голове ребёнка за счёт тщательно проработанной конструкции очков.</p>
-          <p class="technology__slider-number slider__number"><span class="technology__slider-number--current">04 /</span> 04</p>
         </li>
       </ul>
 
       <div class="technology__slider-container slider">
-        <div class="slider__buttons">
-          <button class="technology__slider-button slider__button slider__button--back" type="button"><span class="visually-hidden">Назад</span></button>
-          <button class="technology__slider-button slider__button slider__button--next" type="button"><span class="visually-hidden">Вперед</span></button>
+          <p class="slider__number"><span class="product__slider-number--current">01 /</span> 06</p>
+
+          <div class="slider__buttons">
+            <button class="slider__button slider__button--back" type="button"><span class="visually-hidden">Назад</span></button>
+            <button class="slider__button slider__button--next" type="button"><span class="visually-hidden">Вперед</span></button>
+          </div>
         </div>
-      </div>
 
     </section>
 
