--- a/source/product.html
+++ b/source/product.html
@@ -74,26 +74,38 @@
 
         <div class="product__slider">
           <p class="product__slider-content">Что показываем в планетарии</p>
-          <div class="swiper-container swiper-container-initialized swiper-container-horizontal">
+          <div class="swiper-container">
             <ul class="product__slider-list swiper-wrapper">
 
-            <li class="product__slider-item swiper-slide">
-              <img class="product__slider-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+            <li class="product__slide swiper-slide">
+              <div class="product__slide-wrapper">
+                <img class="product__slide-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+              </div>
             </li>
-            <li class="product__slider-item swiper-slide">
-              <img class="product__slider-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+            <li class="product__slide swiper-slide">
+              <div class="product__slide-wrapper">
+                <img class="product__slide-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+              </div>
             </li>
-            <li class="product__slider-item swiper-slide">
-              <img class="product__slider-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+            <li class="product__slide swiper-slide">
+              <div class="product__slide-wrapper">
+                <img class="product__slide-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+              </div>
             </li>
-            <li class="product__slider-item swiper-slide">
-              <img class="product__slider-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+            <li class="product__slide swiper-slide">
+              <div class="product__slide-wrapper">
+                <img class="product__slide-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+              </div>
             </li>
-            <li class="product__slider-item swiper-slide">
-              <img class="product__slider-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+            <li class="product__slide swiper-slide">
+              <div class="product__slide-wrapper">
+                <img class="product__slide-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+              </div>
             </li>
-            <li class="product__slider-item swiper-slide">
-              <img class="product__slider-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+            <li class="product__slide swiper-slide">
+              <div class="product__slide-wrapper">
+                <img class="product__slide-image" src="img/astronaut-in-outer-space.jpg" width="562" height="300" alt="Космонавт в космосе">
+              </div>
             </li>
           </ul>
 
